[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wafle-imago"
version = "0.1.0"
description = "Wafle-Imago — universal MCP server for AI image generation. Free, no-auth, unlimited images."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "WAFLE"},
]
requires-python = ">=3.10"
keywords = ["mcp", "image-generation", "ai", "wafle", "imago", "pollinations"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.28.0",
    "huggingface-hub>=0.20.0",
    "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/creandoaldia/wafle-imago"
Repository = "https://github.com/creandoaldia/wafle-imago"
Documentation = "https://github.com/creandoaldia/wafle-imago#readme"

[project.scripts]
wafle-imago = "wafleimago.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["wafleimago*"]
